--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,16 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  http: ^1.1.0
+  intl: ^0.18.0
+  path_provider: ^2.1.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
